# mon_FTP

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.c
src/net_utils/: CMakeLists.txt  display_utils.c  net_utils.c  peer.c  remove_unused_sockets.c  tcp_server.c
src/net_utils/auth/: CMakeLists.txt  user.c  user.h
src/net_utils/include/: net_utils.h
src/net_utils/include/net_utils/auth/: user.h
src/server/: CMakeLists.txt  client_io.c  commands.c  commands.h  exec.c  ftp.c  main.c  parse_cmd.c  reply_codes.c  reply_codes.h
src/server/ftp_commands/: default.c
src/server/ftp_commands/noop/: noop.c
src/server/ftp_commands/pass/: pass.c
src/server/ftp_commands/pwd/: pwd.c
src/server/ftp_commands/user/: user.c
src/server/include/: commands.h  my_ftp.h  myftp.h  reply_codes.h
src/server/include/auth/: user.h
